# remote_desktop_manager

./: Cargo.toml  README.md
src/: app.rs  client.rs  encryption.rs  main.rs
