[package]
name = "remote_desktop_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
panic = "abort"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }