[package]
name = "remote_desktop_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.0"
aes-gcm = "0.10.1"
aes = "0.8.2"
rand = "0.8.5"
argon2 = "0.5.3"
rfd = "0.14.1"

[profile.release]
panic = "abort"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }